2007-02-25  Sam Weinig  <sam@webkit.org>

        Update forgotten files.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateLayerPosition):

2007-02-25  David Hyatt  <hyatt@apple.com>

        Fix for regression caused by changing the containing block of positioned elements with no positioned ancestor
        to be the initial containing block (represented in our tree by the RenderView).  Rework RenderView's layout
        to have very few special cases.   Now it will just relayout its children when the width/height of the
        view actually changes.  Positioned elements no longer get a special additional layout, since width/height
        adjustments are caught by the base class already anyway.

        Reviewed by mjs, darin

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::layoutBlock):
        (WebCore::RenderFlexibleBox::layoutVerticalBox):
        * rendering/RenderView.cpp:
        (WebCore::RenderView::RenderView):
        (WebCore::RenderView::layout):
        * rendering/RenderView.h:

2007-02-25  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed, build fix.

        - fix build breakage

        * platform/gdk/ScrollViewGdk.cpp:
        (WebCore::ScrollView::fullyClippedContentRect):
        * platform/qt/ScrollViewQt.cpp:
        (WebCore::ScrollView::fullyClippedContentRect):

2007-02-24  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Adam.

        - fixed layout test failure in fast/overflow/scrollRevealButton
        
        I added a new ScrollView method, fullyClippedContentRect, that vies the content rect
        as clipped by all ancestor scroll views, not just this one. Currently it only works
        correctly on mac however. visibleContentRect, only accounting for the clipping from
        this particular scroll view, is sufficient for most purposes.

        * page/Frame.cpp: