@@ -1,3 +1,13 @@
+2007-02-25  David Hyatt  <hyatt@apple.com>
+
+        Revert my change to the default fill color.  Just set the color to transparent explicitly when
+        drawing textarea resizer frames.
+
+        * platform/graphics/GraphicsContext.cpp:
+        (WebCore::GraphicsContextState::GraphicsContextState):
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::paintOverflowControls):
+
 2007-02-25  Sam Weinig  <sam@webkit.org>
 
         Update forgotten files.
